office bg image fix on ios

--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ h3.heading {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    will-change: transform;
+   z-index: -1;
    top: 0;
    left: 0;
    display: table;
@@ -315,6 +316,7 @@ h3.heading {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    will-change: transform;
+   z-index: -2;
    top: 0;
    left: 0;
    display: table;
